@@ -16,6 +16,7 @@
  */
 package javax.security.auth.message.config;
 
+import java.lang.reflect.InvocationTargetException;
 import java.security.AccessController;
 import java.security.Permission;
 import java.security.PrivilegedAction;
@@ -65,13 +66,14 @@ public abstract class AuthConfigFactory {
                     new PrivilegedExceptionAction<AuthConfigFactory>() {
                 @Override
                 public AuthConfigFactory run() throws ClassNotFoundException,
-                        InstantiationException, IllegalAccessException {
+                        InstantiationException, IllegalAccessException, IllegalArgumentException,
+                        InvocationTargetException, NoSuchMethodException, SecurityException {
                     // Load this class with the same class loader as used for
                     // this class. Note that the Thread context class loader
                     // should not be used since that would trigger a memory leak
                     // in container environments.
                     Class<?> clazz = Class.forName(className);
-                    return (AuthConfigFactory) clazz.newInstance();
+                    return (AuthConfigFactory) clazz.getDeclaredConstructor().newInstance();
                 }
             });
         } catch (PrivilegedActionException e) {
