@@ -16,6 +16,7 @@
  */
 package javax.websocket.server;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
@@ -175,9 +176,10 @@ public interface ServerEndpointConfig extends EndpointConfig {
                     Class<Configurator> clazz =
                             (Class<Configurator>) Class.forName(
                                     DEFAULT_IMPL_CLASSNAME);
-                    result = clazz.newInstance();
-                } catch (ClassNotFoundException | InstantiationException |
-                        IllegalAccessException e) {
+                    result = clazz.getDeclaredConstructor().newInstance();
+                } catch (ClassNotFoundException | InstantiationException | IllegalAccessException |
+                        IllegalArgumentException | InvocationTargetException |
+                        NoSuchMethodException | SecurityException e) {
                     // No options left. Just return null.
                 }
             }
